# discharge-agent

./: .gitignore  ARCHITECTURE.md  PROJECT.md  README.md  pyproject.toml
backend/discharge_agent/: __init__.py  agent.py  assertions.py  chart_view.py  checks.py  config.py  engine.py  eval.py  hero.py  kb.py  llm.py  loader.py  main.py  normalize.py  patient_state.py  schemas.py  verifier.py
data/: README.md  build_hero.py  discrepancy-train.jsonl  discrepancy-train.labels.jsonl  generate_dataset.py  summary.json  synthea_to_records.py
data/hero/: hero_labels.json  hero_record.json  synthea_substrate.json
data/hero_patient/: build.py  ground_truth.json  hero_patient.json  source_provenance.json
data/samples/: discrepancy-check-sample.jsonl  discrepancy-check-sample.labels.jsonl
docs/: data-pipeline-notes.md  engine.md  ideation.md
frontend/: vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  recon.ts  types.ts
frontend/src/components/: AgentTrace.tsx  ChartReview.tsx  CopilotPanel.tsx  MedRecWorkspace.tsx  NavigatorSidebar.tsx  OrdersView.tsx  ProblemList.tsx  ResultsReview.tsx  Snapshot.tsx  Storyboard.tsx  TranscriptView.tsx  icons.tsx
